--- a/src/app/frontend/home/home.component.html
+++ b/src/app/frontend/home/home.component.html
@@ -188,6 +188,9 @@
                                         <div class="circle_inner">
                                             <div class="round_per"></div>
                                         </div>
+                                        <div class="circle_inbox">
+                                            <span class="percent_text">50%</span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="progress__text">
@@ -199,6 +202,9 @@
                                     <div class="circle_percent" data-percent="35">
                                         <div class="circle_inner">
                                             <div class="round_per"></div>
+                                        </div>
+                                        <div class="circle_inbox">
+                                            <span class="percent_text">35%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -212,6 +218,9 @@
                                         <div class="circle_inner">
                                             <div class="round_per"></div>
                                         </div>
+                                        <div class="circle_inbox">
+                                            <span class="percent_text">12%</span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="progress__text">
@@ -223,6 +232,9 @@
                                     <div class="circle_percent" data-percent="3">
                                         <div class="circle_inner">
                                             <div class="round_per"></div>
+                                        </div>
+                                        <div class="circle_inbox">
+                                            <span class="percent_text">3%</span>
                                         </div>
                                     </div>
                                 </div>
