--- a/src/app/frontend/shop/shop.component.html
+++ b/src/app/frontend/shop/shop.component.html
@@ -13,13 +13,6 @@
                                     <div class="swiper-slide"><img src="{{imageBaseUrl + product.image }}"></div>
                                 </div>
                             </div>
-                            <!-- <div class="slider__controls">
-
-                                <div class="slider__pagination"></div>
-
-                                <div class="swiper-button-next"></div>
-                                <div class="swiper-button-prev"></div>
-                            </div> -->
                         </div>
                     </div>
                     <div class="shop__box__desc">
@@ -40,18 +33,60 @@
                             <a href="javascript:;" id="dropdownBasic1" ngbDropdownToggle>Buy Now  </a>
                             <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
                                 <button ngbDropdownItem class="paymentBtn">Pay with Xumm</button>
-                                <button ngbDropdownItem class="paymentBtn" (click)="makePayment(product.price)">Pay with Stripe</button>
+                                <button ngbDropdownItem class="paymentBtn" data-bs-toggle="modal" data-bs-target="#stripeModal" (click)="clickEvent(product.title, product.price)" >Pay with Stripe</button>
                               </div>
+                                <!-- Stripe form -->
+                        <div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h6 class="modal-title" id="stripeModalLabel"> {{productTitle}}</h6>
+                                <h6 class="modal-title ml-4" id="productPrice"> $ {{productPrice}}.00</h6>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="resetForm()"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form class="login__form" [formGroup]="stripeForm" (ngSubmit)="createStripeToken(stripeForm.value)" id="payment-form">
+                        
+                                            <div class="form-group">
+                                                <!-- <input type="hidden" formControlName="_id" class="form-control"> -->
+                                                <label for="f-name">Shipping Address</label>
+                                                <input type="text" id="f-name" class="form-control" formControlName="shippingAddress"
+                                                [ngClass]="{ 'is-invalid': g['shippingAddress'].touched && g['shippingAddress'].errors }">
+                                                <span *ngIf="g['shippingAddress'].touched && g['shippingAddress'].errors?.['required']" class="invalid-feedback">
+                                                    Shipping Address is required
+                                                </span>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="hidden" formControlName="_id" class="form-control">
+                                                <label for="f-name">Billing Address</label>
+                                                <input type="text" id="f-name" class="form-control" formControlName="billingAddress"
+                                                [ngClass]="{ 'is-invalid': g['billingAddress'].touched && g['billingAddress'].errors }">
+                                                <span *ngIf="g['billingAddress'].touched && g['billingAddress'].errors?.['required']" class="invalid-feedback">
+                                                    Billing Address is required
+                                                </span>
+                                            </div>
+                                            <div class="form-group">
+                                                <div id="card-info" #cardInfo></div>
+                                                <span id="card-errors" class="text-danger" role="alert" *ngIf="cardError && cardError !== true">
+                                                  {{ cardError }}
+                                                </span>
+                                              </div>
+                                            <button class="submit_button" [disabled]="cardError || stripeForm.invalid">Submit</button>
+                                    </form>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
                         </div>
                     </div>
-                    <br><br>
-                    <div class="shop__box__bottom">
-                        <div class="buy__btn">
+                    <br>
+                    <div class="actionsButton" *ngIf="auth.isAuthenticated$ | async">
+                        <li>
                             <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#exampleModal2" (click)="updateProduct(product)">Update</a>
-                        </div>
-                        <div class="buy__btn">
-                            <a href="javascript:;" (click)="removeProduct(product._id)">Delete</a>
-                        </div>
+                        </li>
+                        <li>
+                            <a href="javascript:;" style="color: red" (click)="removeProduct(product._id)">Delete</a>
+                        </li>
                     </div>
                 </div>
             </div>
@@ -63,7 +98,7 @@
     </div>
       
 <!-- add Product form -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
+ <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -84,11 +119,7 @@
                     </div>
                 <div class="form-group">
                     <label for="images" class="form-label">Image</label>
-                    <input type="file" formControlName="image" class="form-control" (change)="onFileChange($event)" >
-                    <!-- [ngClass]="{ 'is-invalid': f['image'].touched && f['image'].errors }" id="images"> -->
-                    <!-- <span *ngIf="f['image'].touched && f['image'].errors" class="invalid-feedback">
-                      <span *ngIf="f['image'].errors['required']">Image is required</span>
-                   </span> -->
+                    <input type="file" formControlName="image" class="form-control" (change)="onFileChange($event)">
                 </div>
                 <img [src]="imageSrc" *ngIf="imageSrc" class="mb-2 imageStyling">
                 <div class="form-group">
@@ -119,5 +150,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 </main>
