--- a/src/app/frontend/shop/shop.component.html
+++ b/src/app/frontend/shop/shop.component.html
@@ -25,26 +25,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="shop__box__bottom">
+                    <div class="shop__box__bottom" *ngIf="userRole !== 'Admin'">
                         <div class="shop__count">
                             <p>{{product.quantity}} of 10,000</p>
                         </div>
                         <div ngbDropdown class="buy__btn">
-                            <a href="javascript:;" id="dropdownBasic1" ngbDropdownToggle>Buy Now  </a>
-                            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                            <a href="javascript:;" id="dropdownBasic1" (click)="buyProduct()" ngbDropdownToggle>Buy Now  </a>
+                            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" *ngIf="userEmail && userEmail !== undefined">
                                 <button ngbDropdownItem class="paymentBtn">Pay with Xumm</button>
                                 <button ngbDropdownItem class="paymentBtn" data-bs-toggle="modal" data-bs-target="#stripeModal" (click)="clickEvent(product.title, product.price)" >Pay with Stripe</button>
-                              </div>
-                                <!-- Stripe form -->
-                        <div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
+                            </div>
+                            <!-- Stripe form -->
+                            <div class="modal fade" id="stripeModal" tabindex="-1" aria-labelledby="stripeModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                <h6 class="modal-title" id="stripeModalLabel"> {{productTitle}}</h6>
-                                <h6 class="modal-title ml-4" id="productPrice"> $ {{productPrice}}.00</h6>
+                                <h6 class="modal-title" id="stripeModalLabel"> Pay with Stripe</h6>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="resetForm()"></button>
                                 </div>
                                 <div class="modal-body">
+                                    <h6 class="modal-title"> {{productTitle}}</h6>
+                                    <h6 class="modal-title" class="modalProductPrice"> ($ {{productPrice}}.00)</h6>
                                     <form class="login__form" [formGroup]="stripeForm" (ngSubmit)="createStripeToken(stripeForm.value)" id="payment-form">
                         
                                             <div class="form-group">
@@ -66,7 +67,7 @@
                                                 </span>
                                             </div>
                                             <div class="form-group">
-                                                <div id="card-info" #cardInfo></div>
+                                                <div id="card-element"></div>
                                                 <span id="card-errors" class="text-danger" role="alert" *ngIf="cardError && cardError !== true">
                                                   {{ cardError }}
                                                 </span>
@@ -75,12 +76,12 @@
                                     </form>
                                 </div>
                             </div>
-                            </div>
+                        </div>
                         </div>
                         </div>
                     </div>
                     <br>
-                    <div class="actionsButton" *ngIf="auth.isAuthenticated$ | async">
+                    <div class="actionsButton" *ngIf="(auth.isAuthenticated$ | async) && userRole == 'Admin'">
                         <li>
                             <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#exampleModal2" (click)="updateProduct(product)">Update</a>
                         </li>
@@ -94,7 +95,7 @@
         
     </section><br>
     <div class="buy__btn text-center mb-5">
-        <a  data-bs-toggle="modal" data-bs-target="#exampleModal2" (click)="changeTitle('Add Product')" href="javascript:;" *ngIf="auth.isAuthenticated$ | async">Add Product</a>
+        <a  data-bs-toggle="modal" data-bs-target="#exampleModal2" (click)="changeTitle('Add Product')" href="javascript:;" *ngIf="(auth.isAuthenticated$ | async) && userRole == 'Admin'">Add Product</a>
     </div>
       
 <!-- add Product form -->
