--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -4,7 +4,63 @@
             <div class="auction__head">
                 <h2>Auction House</h2>
             </div>
-            <div class="auction__wrap">
+            <div class="shop__wrap">
+                <div class="shop__box" *ngFor="let auction of auctions;let i = index">
+                    <div class="shop__box__main">
+                        <div class="box__image">
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="{{imageBaseUrl + auction.image }}"></div>
+                                </div>
+                            </div>
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img src="{{imageBaseUrl + auction.video }}"></div>
+                                </div>
+                            </div>
+                            <!-- <div class="slider__controls">
+
+                                <div class="slider__pagination"></div>
+
+                                <div class="swiper-button-next"></div>
+                                <div class="swiper-button-prev"></div>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="shop__box__desc">
+                        <h3>{{auction.title}}</h3>
+                        <!-- <span class="auctionPrice">$ {{auction.price}}.00</span> -->
+                        <div class="show__cont">
+                            <a class="showBtn" (click)="showAuctionDes[i] = !showAuctionDes[i]">Description</a>
+                            <div class="hideme" *ngIf="showAuctionDes[i]">
+                                <p>{{auction.description}}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop__box__bottom">
+                        <!-- <div class="shop__count">
+                            <p>{{auction.quantity}} of 10,000</p>
+                        </div> -->
+                        <div ngbDropdown class="buy__btn">
+                            <a href="javascript:;" id="dropdownBasic1" ngbDropdownToggle>Buy Now  </a>
+                            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                                <button ngbDropdownItem class="paymentBtn">Pay with Xumm</button>
+                                <!-- <button ngbDropdownItem class="paymentBtn" (click)="makePayment(auction.price)">Pay with Stripe</button> -->
+                              </div>
+                        </div>
+                    </div>
+                    <br><br>
+                    <div class="shop__box__bottom">
+                        <div class="buy__btn">
+                            <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#auctionModal" (click)="updateAuction(auction)">Update</a>
+                        </div>
+                        <div class="buy__btn">
+                            <a href="javascript:;" (click)="removeAuction(auction._id)">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="auction__wrap">
                 <div class="auction__box">
                     <div class="auction__box__head">
                         <div class="auction__image">
@@ -283,7 +339,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <br>
