add share icon in profile section

--- a/src/app/frontend/user-collection/user-collection.component.html
+++ b/src/app/frontend/user-collection/user-collection.component.html
@@ -16,6 +16,9 @@
                     <div class="head__content__icon">
                         <a href="javascript:;"><img src="../../../assets/images/head-content-icon.svg"></a>
                     </div>
+                    <div class="head__content__icon">
+                        <a href="javascript:;"><img src="../../../assets/images/share-icon.svg"></a>
+                    </div>
                 </div>
                 <p>XRP address: rs985678hgnB75</p>
                 <p>3 Item Purchased by FAKTÜRY</p>
