add Trust line button in home page

--- a/src/app/frontend/home/home.component.html
+++ b/src/app/frontend/home/home.component.html
@@ -170,6 +170,9 @@
                     <div class="buy__head__btn">
                         <a href="https://xumm.app/detect/xapp:xumm.dex?base=FAKTURY+rNwBNkHz3ZAnx77XFjGR8nRnZHw4gKgmpr&quote=xrp" target="_blank">Xumm Purchase</a>
                     </div>
+                    <div class="buy__head__btn">
+                        <a href="javascript:;">TRUST LINE</a>
+                    </div>
                 </div>
             </div>
             <div class="buy__main">
@@ -338,21 +341,21 @@
                             <div class="list__image">
                                 <img src="../../../assets/images/gang-bottom.png" alt=""/>
                             </div>
-                            <h4>Nifema</h4>
+                            <h4>Arbaaz</h4>
                             <span>Software Development</span>
                         </div>
                         <div class="list__member">
                             <div class="list__image">
-                                <img src="../../../assets/images/gang-bottom2.png" alt=""/>
+                                <img src="../../../assets/images/globe.png" alt=""/>
                             </div>
                             <h4>The Globe</h4>
                             <span>Marketing</span>
                         </div>
                         <div class="list__member">
                             <div class="list__image">
-                                <img src="../../../assets/images/gang-bottom3.png" alt=""/>
+                                <img src="../../../assets/images/Khuram.png" alt=""/>
                             </div>
-                            <h4>Namoos</h4>
+                            <h4>Khuram</h4>
                             <span>Lead Backend Development</span>
                         </div>
                     </div>
