--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -5,10 +5,10 @@
                 <h2>Auction House</h2>
             </div>
             <div class="auction__wrap">
-                <div class="auction__box">
+                <div class="auction__box" *ngFor="let auction of auctions; let i = index" >
                     <div class="auction__box__head">
                         <div class="auction__image">
-                            <img src="../../../assets/images/auction1.png">
+                            <img src="{{imageBaseUrl + auction.image }}">
                         </div>
                     </div>
                     <div class="wrapper">
@@ -43,10 +43,10 @@
                     </div>
                     <div class="box__offer">
                         <div class="offer__btn">
-                            <a href="javascript:;" (click)="clickEvent()">OFFER</a>
+                            <a href="javascript:;" (click)="showProductDes[i] = !showProductDes[i]">OFFER</a>
                         </div>
                     </div>
-                    <div class="auction__box__form" *ngIf="show">
+                    <div class="auction__box__form" *ngIf="showProductDes[i]">
                         <form class="auction__form" [formGroup]="bidForm" (submit)="bidsForm()">
                             <div class="form-group">
                                 <input type="text" id="xrp__address" placeholder="XRP Address"
@@ -84,202 +84,6 @@
                         </form>
                         <div class="submit__btn">
                             <a href="javascript:;" (click)="bidsForm()">Submit</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="auction__box">
-                    <div class="auction__box__head">
-                        <div class="auction__image2">
-                            <img src="../../../assets/images/auction2.png">
-                        </div>
-                    </div>
-                    <div class="wrapper">
-                        <div class="countdown-container" class="countdown-container">
-                            <h5>Time Remaing :</h5>
-                            <article class="countdown">
-                                <div class="js-days" class="number"></div>
-                                <div class="js-hours" class="number"></div>
-                                <div class="sub__min">
-                                    <div class="js-minutes" class="number"></div>
-                                    <div class="dotts">:</div>
-                                    <div class="js-seconds" class="number"></div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-
-                    <div class="auction__box__main">
-                        <div class="highest__bid">
-                            <div class="bid__text">
-                                <p>Highest Bid By :</p>
-                            </div>
-                            <div class="bid__desc">
-                                <div class="desc__image">
-                                    <img src="../../../assets/images/bid-desc.svg">
-                                </div>
-                                <div class="desc__text">
-                                    <p>carryan@gmail.com</p>
-                                    <p>Amount = 300 XRP</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="box__offer">
-                        <div class="offer__btn">
-                            <a href="javascript:;" (click)="clickEvent()">OFFER</a>
-                        </div>
-                    </div>
-                    <div class="auction__box__form" *ngIf="show">
-                        <form class="auction__form">
-                            <div class="form-group">
-                                <input type="text" placeholder="XRP Address">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Email Address">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Bid in FAK">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Bid in XRP">
-                            </div>
-                            <div class="auction__checkbox">
-                                <input class="styled-checkbox" id="styled-checkbox-2" type="checkbox" value="value1">
-                                <label for="styled-checkbox-2">No Maximum Bid</label>
-                            </div>
-                        </form>
-                        <div class="submit__btn">
-                            <a href="javascript:;">Submit</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="auction__box">
-                    <div class="auction__box__head">
-                        <div class="auction__image">
-                            <img src="../../../assets/images/auction3.png">
-                        </div>
-                    </div>
-                    <div class="wrapper">
-                        <div class="countdown-container" class="countdown-container">
-                            <h5>Time Remaing :</h5>
-                            <article class="countdown">
-                                <div class="js-days" class="number"></div>
-                                <div class="js-hours" class="number"></div>
-                                <div class="sub__min">
-                                    <div class="js-minutes" class="number"></div>
-                                    <div class="dotts">:</div>
-                                    <div class="js-seconds" class="number"></div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="auction__box__main">
-                        <div class="highest__bid">
-                            <div class="bid__text">
-                                <p>Highest Bid By :</p>
-                            </div>
-                            <div class="bid__desc">
-                                <div class="desc__image">
-                                    <img src="../../../assets/images/bid-desc.svg">
-                                </div>
-                                <div class="desc__text">
-                                    <p>carryan@gmail.com</p>
-                                    <p>Amount = 300 XRP</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="box__offer">
-                        <div class="offer__btn">
-                            <a href="javascript:;" (click)="clickEvent()">OFFER</a>
-                        </div>
-                    </div>
-                    <div class="auction__box__form" *ngIf="show">
-                        <form class="auction__form">
-                            <div class="form-group">
-                                <input type="text" placeholder="XRP Address">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Email Address">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Bid in FAK">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Bid in XRP">
-                            </div>
-                            <div class="auction__checkbox">
-                                <input class="styled-checkbox" id="styled-checkbox-3" type="checkbox" value="value1">
-                                <label for="styled-checkbox-3">No Maximum Bid</label>
-                            </div>
-                        </form>
-                        <div class="submit__btn">
-                            <a href="javascript:;">Submit</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="auction__box">
-                    <div class="auction__box__head">
-                        <div class="auction__image">
-                            <img src="../../../assets/images/auction4.png">
-                        </div>
-                    </div>
-                    <div class="wrapper">
-                        <div class="countdown-container" class="countdown-container">
-                            <h5>Time Remaing :</h5>
-                            <article class="countdown">
-                                <div class="js-days" class="number"></div>
-                                <div class="js-hours" class="number"></div>
-                                <div class="sub__min">
-                                    <div class="js-minutes" class="number"></div>
-                                    <div class="dotts">:</div>
-                                    <div class="js-seconds" class="number"></div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="auction__box__main">
-                        <div class="highest__bid">
-                            <div class="bid__text">
-                                <p>Highest Bid By :</p>
-                            </div>
-                            <div class="bid__desc">
-                                <div class="desc__image">
-                                    <img src="../../../assets/images/bid-desc.svg">
-                                </div>
-                                <div class="desc__text">
-                                    <p>carryan@gmail.com</p>
-                                    <p>Amount = 300 XRP</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="box__offer">
-                        <div class="offer__btn">
-                            <a href="javascript:;" (click)="clickEvent()">OFFER</a>
-                        </div>
-                    </div>
-                    <div class="auction__box__form" *ngIf="show">
-                        <form class="auction__form">
-                            <div class="form-group">
-                                <input type="text" placeholder="XRP Address">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Email Address">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Bid in FAK">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" placeholder="Bid in XRP">
-                            </div>
-                            <div class="auction__checkbox">
-                                <input class="styled-checkbox" id="styled-checkbox-4" type="checkbox" value="value1">
-                                <label for="styled-checkbox-4">No Maximum Bid</label>
-                            </div>
-                        </form>
-                        <div class="submit__btn">
-                            <a href="javascript:;">Submit</a>
                         </div>
                     </div>
                 </div>
