--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -7,8 +7,14 @@
             <div class="auction__wrap">
                 <div class="auction__box" *ngFor="let auction of auctions; let i = index" >
                     <div class="auction__box__head">
-                        <div class="auction__image">
-                            <img src="{{imageBaseUrl + auction.image }}">
+                        <div class="auction__image" *ngIf="!auction.file.includes('.mp4')">
+                            <img src="{{imageBaseUrl + auction.file }}">
+                        </div>
+                        <div class="auction__image" *ngIf="auction.file.includes('.mp4')">
+                            <video controls="false" autoplay="autoplay" loop>
+                                <source src="{{imageBaseUrl + auction.file}}" type="video/mp4">
+                                Your browser does not support the video tag.
+                              </video>
                         </div>
                     </div>
                     <div class="wrapper">
@@ -43,10 +49,10 @@
                     </div>
                     <div class="box__offer">
                         <div class="offer__btn">
-                            <a href="javascript:;" (click)="showProductDes[i] = !showProductDes[i]">OFFER</a>
+                            <a href="javascript:;" (click)="clickEvent()">OFFER</a>
                         </div>
                     </div>
-                    <div class="auction__box__form" *ngIf="showProductDes[i]">
+                    <div class="auction__box__form" *ngIf="show">
                         <form class="auction__form" [formGroup]="bidForm" (submit)="bidsForm()">
                             <div class="form-group">
                                 <input type="text" id="xrp__address" placeholder="XRP Address"
@@ -92,7 +98,7 @@
     </section>
     <br>
     <div class="buy__btn text-center mb-5">
-        <a  data-bs-toggle="modal" data-bs-target="#auctionModal" (click)="changeTitle('Add Auction')" href="javascript:;">Add Auction</a>
+        <a  data-bs-toggle="modal" data-bs-target="#auctionModal" (click)="changeTitle('Add Auction')" href="javascript:;" *ngIf="(auth.isAuthenticated$ | async) && userRole == 'Admin'">Add Auction</a>
     </div>
       
 <!-- add auction form -->
@@ -106,39 +112,23 @@
         <div class="modal-body">
             <form class="login__form" [formGroup]="auctionForm" >
   
-                    <div class="form-group">
-                        <input type="hidden" formControlName="_id" class="form-control">
-                        <label for="f-name">Title</label>
-                        <input type="text" id="f-name" class="form-control" formControlName="title"
-                        [ngClass]="{ 'is-invalid': f['title'].touched && f['title'].errors }">
-                      <span *ngIf="f['title'].touched && f['title'].errors?.['required']" class="invalid-feedback">
-                        Title is required
-                      </span>
-                    </div>
                 <div class="form-group">
-                    <label for="images" class="form-label">Image</label>
-                    <input type="file" formControlName="image" name="image" class="form-control" (change)="onFileChange($event)" >
-                    <!-- [ngClass]="{ 'is-invalid': f['image'].touched && f['image'].errors }" id="images"> -->
-                    <!-- <span *ngIf="f['image'].touched && f['image'].errors" class="invalid-feedback">
-                      <span *ngIf="f['image'].errors['required']">Image is required</span>
-                   </span> -->
+                    <input type="hidden" formControlName="_id" class="form-control">
+                    <label for="f-name">Title</label>
+                    <input type="text" id="f-name" class="form-control" formControlName="title"
+                    [ngClass]="{ 'is-invalid': f['title'].touched && f['title'].errors }">
+                  <span *ngIf="f['title'].touched && f['title'].errors?.['required']" class="invalid-feedback">
+                    Title is required
+                  </span>
                 </div>
-                <img [src]="imageSrc" *ngIf="imageSrc" class="mb-2 imageStyling">
                 <div class="form-group">
-                    <label for="videos" class="form-label">Video</label>
-                    <input type="file" formControlName="video" name="video" class="form-control" (change)="onVideoChange($event)" >
-                    <!-- [ngClass]="{ 'is-invalid': f['image'].touched && f['image'].errors }" id="images"> -->
-                    <!-- <span *ngIf="f['image'].touched && f['image'].errors" class="invalid-feedback">
-                      <span *ngIf="f['image'].errors['required']">Image is required</span>
-                   </span> -->
+                    <label for="image" class="form-label">Image OR Video</label>
+                    <input type="file" formControlName="file" class="form-control" (change)="onFileChange($event)">
                 </div>
-                <video [src]="videoSrc" *ngIf="videoSrc" class="mb-2 imageStyling"></video>
+                 <img [src]="fileSrc" *ngIf="fileSrc" class="mb-2 imageStyling">
                 <div class="form-group">
                     <label for="exampleInputPassword1" class="form-label">Description</label>
-                    <input type="text" formControlName="description" class="form-control" [ngClass]="{ 'is-invalid': f['description'].touched && f['description'].errors }" id="inputPassword4">
-                    <span *ngIf="f['description'].touched && f['description'].errors" class="invalid-feedback">
-                      <span *ngIf="f['description'].errors['required']">Title is required</span>
-                   </span>
+                    <input type="text" formControlName="description" class="form-control" id="inputPassword4">
                   </div>
                   <button [hidden]="!auctionForm.valid" class="submit_button"(click)="formTitle=='Add Auction'? onSubmit(auctionForm.value) : onUpdate()">Submit</button>
             </form>
