--- a/src/styles.css
+++ b/src/styles.css
@@ -1793,7 +1793,32 @@ button.d-flex.align-items-center.justify-content-between.btn.btn-link {
     width: 21.37em;
     height: 29.37em;
     margin: 0 auto;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    margin: 0;
 }
+video {
+    min-width: 100%;
+    min-height: auto;
+    padding: 0;
+}
+
+.auction__image > img {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .auction__image > video {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 .auction__image2 {
     width: 26.35em;
     height: 29.37em;
