--- a/src/app/frontend/thank-you/thank-you.component.html
+++ b/src/app/frontend/thank-you/thank-you.component.html
@@ -7,7 +7,7 @@
             <h6>Your Order has been received</h6>
             <br><br>
             <div>
-                <a routerLink="/" class="btn btn-xs btn-secondary">Go To Homepage</a>
+                <a routerLink="/" class="btn btn-xs btn-secondary my-3">Go To Homepage</a>
             </div>
             </div>
         </div>
