--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -22,12 +22,12 @@
                         <div class="countdown-container" class="countdown-container">
                             <h5>Time Remaing :</h5>
                             <article class="countdown">
-                                <div class="js-days" class="number"></div>
-                                <div class="js-hours" class="number"></div>
+                                <div class="js-days" class="number">{{days}}</div>
+                                <div class="js-hours" class="number">{{hours}}</div>
                                 <div class="sub__min">
-                                    <div class="js-minutes" class="number"></div>
+                                    <div class="js-minutes" class="number">{{mins}}</div>
                                     <div class="dotts">:</div>
-                                    <div class="js-seconds" class="number"></div>
+                                    <div class="js-seconds" class="number">{{secs}}</div>
                                 </div>
                             </article>
                         </div>
@@ -48,41 +48,43 @@
                             </div>
                         </div>
                     </div>
-                    <div class="box__offer">
+                    <div class="box__offer" *ngIf="!isFormShown">
                         <div class="offer__btn">
-                            <a href="javascript:;" (click)="clickEvent()">OFFER</a>
+                            <a href="javascript:;" (click)="toggleShow()">OFFER</a>
                         </div>
                     </div>
-                    <div class="auction__box__form" *ngIf="show">
-                        <form class="auction__form" [formGroup]="bidForm" (submit)="bidsForm()">
+                    <div class="auction__box__form" *ngIf="isFormShown">
+                        <form class="auction__form" [formGroup]="bidForm">
                             <div class="form-group">
-                                <input type="text" id="xrp__address" placeholder="XRP Address"
-                                class="form-control"
-                                formControlName = "address" [ngClass]="{ 'is-invalid': f['address'].touched && f['address'].errors }">
-                                <span *ngIf="f['address'].touched && f['address'].errors?.['required']" class="invalid-feedback"> 
-                                XRP Address is required</span>
+                                <input type="text"  id="xrp__address" placeholder="XRP Address" class="form-control" formControlName = "address"
+                                [ngClass]="{ 'is-invalid': g['address'].touched && g['address'].errors }">
+                              <span *ngIf="g['address'].touched && g['address'].errors?.['required']" class="invalid-feedback">
+                                XRP Address is required
+                              </span>
                             </div>
                             <div class="form-group">
-                                <input type="text" id="email__address" placeholder="Email Address"
-                                class="form-control" placeholder="Email Address"
-                                formControlName = "email" [ngClass]="{ 'is-invalid': f['email'].touched && f['email'].errors }">
-                                <span *ngIf="f['email'].touched && f['email'].errors?.['required']" class="invalid-feedback">Email is
+                                <input type="email" id="email__address"  placeholder="Email Address"
+                                class="form-control" placeholder="Email Address" formControlName = "email"
+                                [ngClass]="{ 'is-invalid': g['email'].touched && g['email'].errors }">
+                                <span *ngIf="g['email'].touched && g['email'].errors?.['required']" class="invalid-feedback">Email is
                                     required</span>
-                                <span *ngIf="f['email'].touched && f['email'].errors?.['pattern']" class="invalid-feedback">Please enter a valid
+                                <span *ngIf="g['email'].touched && g['email'].errors?.['pattern']" class="invalid-feedback">Please enter a valid
                                     Email
                                 </span>
                             </div>
                             <div class="form-group">
-                                <input type="number" id="bid__fak" placeholder="Bid in FAK" class="form-control"
-                                formControlName = "fakBid" [ngClass]="{ 'is-invalid': f['fakBid'].touched && f['fakBid'].errors }">
-                                <span *ngIf="f['fakBid'].touched && f['fakBid'].errors?.['required']" class="invalid-feedback">
-                                    Bid in FAK is required</span>
+                                <input type="number" id="bid__fak" placeholder="Bid in FAK" class="form-control" formControlName = "fakBid" 
+                                [ngClass]="{ 'is-invalid': g['fakBid'].touched && g['fakBid'].errors }">
+                                <span *ngIf="g['fakBid'].touched && g['fakBid'].errors?.['required']" class="invalid-feedback">
+                                    Bid in FAK is required
+                                </span>
                             </div>
                             <div class="form-group">
-                                <input type="number" id="bid__xrp" placeholder="Bid in XRP" class="form-control"
-                                formControlName = "xrpBid" [ngClass]="{ 'is-invalid': f['xrpBid'].touched && f['xrpBid'].errors }">
-                                <span *ngIf="f['xrpBid'].touched && f['xrpBid'].errors?.['required']" class="invalid-feedback">
-                                    Bid in XRP is required</span>
+                                <input type="number" id="bid__xrp" placeholder="Bid in XRP" class="form-control" formControlName = "xrpBid" 
+                                [ngClass]="{ 'is-invalid': g['xrpBid'].touched && g['xrpBid'].errors }">
+                                <span *ngIf="g['xrpBid'].touched && g['xrpBid'].errors?.['required']" class="invalid-feedback">
+                                    Bid in XRP is required
+                                </span>
                             </div>
                             <div class="auction__checkbox">
                                 <input class="styled-checkbox" id="styled-checkbox-1" type="checkbox" value="value1">
@@ -90,7 +92,8 @@
                             </div>
                         </form>
                         <div class="submit__btn">
-                            <a href="javascript:;" (click)="bidsForm()">Submit</a>
+                            <button (click)="bidsForm(bidForm.value, auction._id)">Submit</button>
+
                         </div>
                     </div>
                     <br>
@@ -140,7 +143,11 @@
                 <div class="form-group">
                     <label for="exampleInputPassword1" class="form-label">Description</label>
                     <input type="text" formControlName="description" class="form-control" id="inputPassword4">
-                  </div>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1" class="form-label">Expiry time</label>
+                    <input type="text" formControlName="expiryTime" class="form-control" id="inputPassword4" bsDatepicker>
+                </div>
                   <button [hidden]="!auctionForm.valid" class="submit_button"(click)="formTitle=='Add Auction'? onSubmit(auctionForm.value) : onUpdate()">Submit</button>
             </form>
         </div>
