--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -21,14 +21,7 @@
                     <div class="wrapper">
                         <div class="countdown-container" class="countdown-container">
                             <h5>Time Remaing :</h5>
-                            <article class="countdown">
-                                <div class="js-days" class="number">{{days}}</div>
-                                <div class="js-hours" class="number">{{hours}}</div>
-                                <div class="sub__min">
-                                    <div class="js-minutes" class="number">{{mins}}</div>
-                                    <div class="dotts">:</div>
-                                    <div class="js-seconds" class="number">{{secs}}</div>
-                                </div>
+                            <article class="countdown" [innerHtml]="auction.timer">
                             </article>
                         </div>
                     </div>
@@ -48,12 +41,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="box__offer" *ngIf="!isFormShown">
+                    <div class="box__offer" *ngIf="!showAuctionForm[i]">
                         <div class="offer__btn">
-                            <a href="javascript:;" (click)="toggleShow()">OFFER</a>
+                            <a href="javascript:;" (click)="showAuctionForm[i] = !showAuctionForm[i]">OFFER</a>
                         </div>
                     </div>
-                    <div class="auction__box__form" *ngIf="isFormShown">
+                    <div class="auction__box__form" *ngIf="showAuctionForm[i]">
                         <form class="auction__form" [formGroup]="bidForm">
                             <div class="form-group">
                                 <input type="text"  id="xrp__address" placeholder="XRP Address" class="form-control" formControlName = "address"
@@ -140,13 +133,14 @@
                     <input type="file" formControlName="file" class="form-control" (change)="onFileChange($event)">
                 </div>
                  <img [src]="fileSrc" *ngIf="fileSrc" class="mb-2 imageStyling">
+                 <div class="form-group">
+                    <label for="exampleInputPassword1" class="form-label">Expiry time</label>
+                    <input type="text" autocomplete="off" formControlName="expiryTime" class="form-control" id="inputPassword4" 
+                    bsDatepicker [bsConfig]="{ isAnimated: true }" placement="bottom" [outsideClick]="true">
+                </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1" class="form-label">Description</label>
                     <input type="text" formControlName="description" class="form-control" id="inputPassword4">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1" class="form-label">Expiry time</label>
-                    <input type="text" formControlName="expiryTime" class="form-control" id="inputPassword4" bsDatepicker>
                 </div>
                   <button [hidden]="!auctionForm.valid" class="submit_button"(click)="formTitle=='Add Auction'? onSubmit(auctionForm.value) : onUpdate()">Submit</button>
             </form>
